change form 3 tables by divs

--- a/src/traspaso-3.html
+++ b/src/traspaso-3.html
@@ -125,52 +125,52 @@
                 </div>
                 <!-- section content -->
                 <div class="section__content">
-                    <table class="details-info-table">
-                        <tbody>
-                        <tr>
-                            <td><strong>VIN:</strong></td>
-                            <td>KM8J33A44HU275633</td>
-                            <td><strong>Año:</strong></td>
-                            <td>2018</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Registración:</strong></td>
-                            <td>11324567</td>
-                            <td><strong>Marca:</strong></td>
-                            <td>NISSAN</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Título:</strong></td>
-                            <td>523641</td>
-                            <td><strong>Modelo:</strong></td>
-                            <td>Rogue</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Título Impreso:</strong></td>
-                            <td>13-feb.-2012</td>
-                            <td><strong>Color:</strong></td>
-                            <td>Azul</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Tablilla:</strong></td>
-                            <td>TBL002</td>
-                            <td><strong>Cilindros:</strong></td>
-                            <td>4</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Marbete:</strong></td>
-                            <td>52369871</td>
-                            <td><strong>País Procedencia:</strong></td>
-                            <td>JP</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Expiración Marbete:</strong></td>
-                            <td>13-feb.-2020</td>
-                            <td><strong></strong></td>
-                            <td></td>
-                        </tr>
-                        </tbody>
-                    </table>
+                    <div class="pv-table pv-details-table">
+                        <div class="pv-table-body">
+                            <div class="pv-table-row">
+                                <div class="pv-table-cell">VIN:</div>
+                                <div class="pv-table-cell">KM8J33A44HU275633</div>
+                                <div class="pv-table-cell">Año:</div>
+                                <div class="pv-table-cell">2018</div>
+                            </div>
+                            <div class="pv-table-row">
+                                <div class="pv-table-cell">Registración:</div>
+                                <div class="pv-table-cell">11324567</div>
+                                <div class="pv-table-cell">Marca:</div>
+                                <div class="pv-table-cell">NISSAN</div>
+                            </div>
+                            <div class="pv-table-row">
+                                <div class="pv-table-cell">Título:</div>
+                                <div class="pv-table-cell">523641</div>
+                                <div class="pv-table-cell">Modelo:</div>
+                                <div class="pv-table-cell">Rogue</div>
+                            </div>
+                            <div class="pv-table-row">
+                                <div class="pv-table-cell">Título Impreso:</div>
+                                <div class="pv-table-cell">13-feb.-2012</div>
+                                <div class="pv-table-cell">Color:</div>
+                                <div class="pv-table-cell">Azul</div>
+                            </div>
+                            <div class="pv-table-row">
+                                <div class="pv-table-cell">Tablilla:</div>
+                                <div class="pv-table-cell">TBL002</div>
+                                <div class="pv-table-cell">Cilindros:</div>
+                                <div class="pv-table-cell">4</div>
+                            </div>
+                            <div class="pv-table-row">
+                                <div class="pv-table-cell">Marbete:</div>
+                                <div class="pv-table-cell">52369871</div>
+                                <div class="pv-table-cell">País Procedencia:</div>
+                                <div class="pv-table-cell">JP</div>
+                            </div>
+                            <div class="pv-table-row">
+                                <div class="pv-table-cell">Expiración Marbete:</div>
+                                <div class="pv-table-cell">13-feb.-2020</div>
+                                <div class="pv-table-cell"></div>
+                                <div class="pv-table-cell"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <!-- ./END Vehicle Information Section -->
@@ -183,28 +183,28 @@
                 </div>
                 <!-- section content -->
                 <div class="section__content">
-                    <table class="details-info-table">
-                        <tbody>
-                        <tr>
-                            <td><strong>Nombre:</strong></td>
-                            <td>JUAN DEL PUEBLO</td>
-                            <td><strong>Licencia:</strong></td>
-                            <td>5412563</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Teléfono:</strong></td>
-                            <td>(787) 444-5566</td>
-                            <td><strong>Estatus:</strong></td>
-                            <td>Valida</td>
-                        </tr>
-                        <tr>
-                            <td><strong>Dirección Físico:</strong></td>
-                            <td>AVENIDA PRINCIPAL H5 SAN JUAN, PR 00595</td>
-                            <td><strong>Dirección Postal:</strong></td>
-                            <td>Dirección Postal:	AVENIDA PRINCIPAL H5 SAN JUAN, PR 00595</td>
-                        </tr>
-                        </tbody>
-                    </table>
+                    <div class="pv-table pv-details-table">
+                        <div class="pv-table-body">
+                            <div class="pv-table-row">
+                                <div class="pv-table-cell">Nombre:</div>
+                                <div class="pv-table-cell">JUAN DEL PUEBLO</div>
+                                <div class="pv-table-cell">Licencia:</div>
+                                <div class="pv-table-cell">5412563</div>
+                            </div>
+                            <div class="pv-table-row">
+                                <div class="pv-table-cell">Teléfono:</div>
+                                <div class="pv-table-cell">(787) 444-5566</div>
+                                <div class="pv-table-cell">Estatus:</div>
+                                <div class="pv-table-cell">Valida</div>
+                            </div>
+                            <div class="pv-table-row">
+                                <div class="pv-table-cell">Dirección Físico:</div>
+                                <div class="pv-table-cell">AVENIDA PRINCIPAL H5 SAN JUAN, PR 00595</div>
+                                <div class="pv-table-cell">Dirección Postal:</div>
+                                <div class="pv-table-cell">Dirección Postal: AVENIDA PRINCIPAL H5 SAN JUAN, PR 00595</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <!-- ./END Current Owner Information Section -->
@@ -217,22 +217,24 @@
                 </div>
                 <!-- section content -->
                 <div class="section__content">
-                    <table class="info-table-gray">
-                        <tr>
-                            <th scope="col">Gravamen</th>
-                            <th scope="col">Institución / Acreedor</th>
-                            <th scope="col">Contrato</th>
-                            <th scope="col">Comentarios</th>
-                        </tr>
-                        <tbody>
-                        <tr>
-                            <td>Mobiliario (Venta Condicional)</td>
-                            <td>Popular Auto Inc</td>
-                            <td>4589632</td>
-                            <td>N/C</td>
-                        </tr>
-                        </tbody>
-                    </table>
+                    <div class="pv-table pv-zebra-table">
+                        <div class="pv-table-heading">
+                            <div class="pv-table-row">
+                                <div class="pv-table-head">Gravamen</div>
+                                <div class="pv-table-head">Institución / Acreedor</div>
+                                <div class="pv-table-head">Contrato</div>
+                                <div class="pv-table-head">Comentarios</div>
+                            </div>
+                        </div>
+                        <div class="pv-table-body">
+                            <div class="pv-table-row">
+                                <div class="pv-table-cell">Mobiliario (Venta Condicional)</div>
+                                <div class="pv-table-cell">Popular Auto Inc</div>
+                                <div class="pv-table-cell">4589632</div>
+                                <div class="pv-table-cell">N/C</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <!-- ./END Assessment Conditions Section -->
@@ -245,36 +247,38 @@
                 </div>
                 <!-- section content -->
                 <div class="section__content">
-                    <table class="transaction-info-table">
-                        <tr>
-                            <th scope="col">Cantidad</th>
-                            <th scope="col">Tipo Concepto</th>
-                            <th scope="col">Contrato</th>
-                            <th scope="col">Costo</th>
-                        </tr>
-                        <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>5120</td>
-                            <td>18/abr/2019 09:48 am</td>
-                            <td>$ 11.00</td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>0842</td>
-                            <td>18/abr/2019 09:48 am</td>
-                            <td>$ 2.00</td>
-                        </tr>
-                        </tbody>
-                        <tfoot>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td class="transaction-total">Total</td>
-                            <td>$13</td>
-                        </tr>
-                        </tfoot>
-                    </table>
+                    <div class="pv-table pv-zebra-table ">
+                        <div class="pv-table-heading">
+                            <div class="pv-table-row">
+                                <div class="pv-table-head">Cantidad</div>
+                                <div class="pv-table-head">Tipo Concepto</div>
+                                <div class="pv-table-head">Contrato</div>
+                                <div class="pv-table-head">Costo</div>
+                            </div>
+                        </div>
+                        <div class="pv-table-body">
+                            <div class="pv-table-row">
+                                <div class="pv-table-cell">1</div>
+                                <div class="pv-table-cell">5120</div>
+                                <div class="pv-table-cell">18/abr/2019 09:48 am</div>
+                                <div class="pv-table-cell">$ 11.00</div>
+                            </div>
+                            <div class="pv-table-row">
+                                <div class="pv-table-cell">1</div>
+                                <div class="pv-table-cell">0842</div>
+                                <div class="pv-table-cell">18/abr/2019 09:48 am</div>
+                                <div class="pv-table-cell">$ 2.00</div>
+                            </div>
+                        </div>
+                        <div class="pv-table-foot">
+                            <div class="pv-table-row">
+                                <div class="pv-table-cell"></div>
+                                <div class="pv-table-cell"></div>
+                                <div class="pv-table-cell text-align-right">Total:</div>
+                                <div class="pv-table-cell">$13.00</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <!-- ./END Transaction Rights Section -->
